Fixed footer link alignments and removed title and description from all pages

--- a/style.css
+++ b/style.css
@@ -507,8 +507,9 @@ button.donate:hover {
         color: #ffffff;
         padding: 2.25em 0;
 }
-#legal-nav div.menu-footer-container {
+#footer-links {
      padding: 2.25em 0;
+     float: left;
 }
 #footer-sidebar .widget_nav_menu li a,
 #footer-sidebar .widget_nav_menu li a:hover,
